Schaltung für arduino mega (ATmega2560) ergänzt.
Zusätzliche Filterung in VCC Zuleitung von SSD1306 Display ergänzt.
Beschreinung der Fish8840 Änderungen ergänzt.
Neue Menü-Punkte für Ohmmeter und Kondensator-Meßfunktion.
Beschreibung der automatischen Kondensator-Meßfunktion.
Beschreibung der automatischen Ohmmeter-Funktion.
Beschreibung Anschluß SSD1306 mit I2C Schnittstelle.
Beschreibung der Optionen BIG_TP und INVERSE_TP.
Problem mit der Erkennung einer Schutzdiode bei bipolaren Transistoren (Germaniun) mit hohem Reststrom ICE0 beschrieben.
Entwurf eines Interface fuer ein Display mit ST7108 Controller durch einen 74HC164 Chip.
Anschluß eines graphischen Displays mit ST7920 Controller ergaenzt.
1.11 / 07.02.2015
Beschreibung des Impulsdrehgebertests erweitert.
Beschreibung der Programmierung erweitert.
ESR-Messung mit 8us Pulsen dokumentiert.
Beschreibung der Optionen für SSD1306 Kontroller mit I2C Schnittstelle:
 WITH_LCD_ST7565=1306, LCD_INTERFACE_MODE=2 und LCD_I2C_ADDR.
Neue Option LCD_ST7565_H_OFFSET zur besseren Anpassung der horizontalen Displayfenster-Lage.
Beschreibung ESR-Messung überarbeitet.
Beschreibung der Funktionen Kontrast und Zeige Daten ergänzt.
Pinbelegung des Impulsdrehgebers auf PD1 (LCD-D5) geändert.
Beschreibung der Pinbelegung von Displayports für verschiedene ATmega.
Beschreibung der erweiterten Schaltung mit ATmega644/1284 .
Beschreibung des Anschluß eines grafischen Displays mit ST7565 Kontroller. 
Beschreibung der Makefile Option WITH_VEXT für die externe Spannungsmessung ergänzt.
Impulsdrehgeber Typ 4 für Up/Down Taster und Typ 5 für höchste Auflösung des Drehgebers.
Beschreibung des Zusatzes Impulsdrehgeber für die Menübedienung ergänzt.
Abgleich der Quarz Frequenz mit 1PPS Signal eines GPS-Empfängers ergänzt.
Im Vorwort: Dank an weitere Personen eingebaut.
Beschreibung für den ST7565 Kontroller (Optionen) ergänzt.
Beschreibung der Zusatzfunktion Selbsttest, vollständiger Test nur mit Menü-Funktion,