@@ -1,3 +1,4 @@
+Beschreibung der Option DC_PWR (obere Grenze der Batterieversorgung).
 Schaltung für arduino mega (ATmega2560) ergänzt.
 Zusätzliche Filterung in VCC Zuleitung von SSD1306 Display ergänzt.
 Beschreinung der Fish8840 Änderungen ergänzt.
